--- a/.env.example
+++ b/.env.example
@@ -12,4 +12,8 @@ DB_DATABASE=fastapi
 DB_USER=root
 DB_PASSWORD=123456
 
+APP_GITHUB_TOKEN='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'
+
+APP_OPENAI_KEY='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'
+
 JWT_SECRET_KEY="abcXYZ123456"
