--- a/.env.example
+++ b/.env.example
@@ -6,14 +6,16 @@ APP_SERVER_PORT=8000
 
 LOG_LEVEL=DEBUG
 
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=fastapi
-DB_USER=root
-DB_PASSWORD=123456
+DB_HOST=198.12.92.78
+DB_PORT=5432
+DB_DATABASE=main_site
+DB_USER=aimazing
+DB_PASSWORD=aimazing_R!
 
-APP_GITHUB_TOKEN='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'
+APP_GITHUB_TOKEN=''
 
-APP_OPENAI_KEY='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'
+APP_OPENAI_KEY=''
+
+APP_DEEPL_KEYS='',''
 
 JWT_SECRET_KEY="abcXYZ123456"
